<resources>
    <string name="app_name">To Do</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="add_new_task">Add New Task</string>
    <string name="enter_task_title">Enter Task Title...</string>
    <string name="enter_task_description">Enter Task Description...</string>
    <string name="select_date_of_task">Select date of task</string>
    <string name="select_time_of_task">Select task time</string>
    <string name="add">Add</string>
    <string name="required">required</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select Time</string>
    <string name="select_item">Select Item</string>
    <string name="todo_list">Todo List</string>
    <string name="edit">Edit</string>

    <string-array name="languages">
        <item>English</item>
        <item>Arabic</item>
    </string-array>
    <string-array name="mode">
        <item>Light</item>
        <item>Night</item>
    </string-array>

</resources>