<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/add_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_task"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/title_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task_title"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/add_new_task"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <EditText
        android:id="@+id/desc_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task_description"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@id/title_edit_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/select_task_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/desc_edit_text"
        android:text="@string/select_date_of_task"
        android:layout_marginVertical="8dp"
        />

    <TextView
        android:id="@+id/select_task_time_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_task_date_text"
        android:text="@string/select_time_of_task"
        android:layout_marginVertical="8dp"
        />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        android:layout_marginVertical="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/select_task_time_text"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="18dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>